chore: draft get and upload banner
