# backend/src/routes/index.js
@@ -8,5 +8,6 @@ router.use('/categories', require('./categories.js'))
 router.use('/products', require('./products.js'))
 router.use('/orders', require('./orders.js'))
 router.use('/users', require('./users.js'))
+router.use('/banners', require('./banners.js'))
 
 module.exports = router;
